--- a/.github/workflows/phplint.yml
+++ b/.github/workflows/phplint.yml
@@ -11,7 +11,7 @@ jobs:
         uses: actions/checkout@v3
         with:
           fetch-depth: 0      
-          options: --ignore=*/vendor/*
+          options: --exclude=vendor
 
       # https://github.com/github/super-linter
       - name: Lint Code Base
